Enhance the top-bar style

--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" [routerLink]="['/']">
-      <i class="bi bi-postcard"></i> Eas'Event
+      <i class="bi bi-calendar-event"></i> Eas'Event
     </a>
     <form class="d-flex">
       <button class="btn btn-light btn-sm m-2" type="button" [routerLink]="['/']">
