Make the username of the organizer and the name of the category displayable

--- a/src/app/components/event-list-item/event-list-item.component.html
+++ b/src/app/components/event-list-item/event-list-item.component.html
@@ -5,10 +5,10 @@
   <p>{{event.street}}</p>
   <p>{{event.city}}</p>
   <p>{{event.country}}</p>
-  <p>{{event.organizer.username}}</p>
+  <p>{{event.organizer_id?.username}}</p>
   <div>
     <span class="badge rounded-pill text-bg-light">
-      {{event.category.name}}
+      {{event.category_id?.name}}
     </span>
     <span>{{event.event_date}}</span>
   </div>
