--- a/src/app/components/event-list-item/event-list-item.component.html
+++ b/src/app/components/event-list-item/event-list-item.component.html
@@ -1,15 +1,34 @@
-<div class="pt-4 pt-2" *ngIf="event">
-  <h3>{{event.title}}</h3>
-  <p>{{event.description}}</p>
-  <p>{{event.number_street}}</p>
-  <p>{{event.street}}</p>
-  <p>{{event.city}}</p>
-  <p>{{event.country}}</p>
-  <p>{{event.organizer.username}}</p>
-  <div>
-    <span class="badge rounded-pill text-bg-light">
-      {{event.category.name}}
-    </span>
-    <span>{{event.event_date}}</span>
+<div class="event-card card mb-4 shadow-sm" *ngIf="event">
+  <div class="row no-gutters">
+    <div class="col-md-4">
+      <img [src]="getCategoryImage(event.category_id)" class="card-img" alt="{{ event.category_id.name }}">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h3 class="card-title">{{ event.title }}</h3>
+        <p class="card-text">{{ event.description }}</p>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            <strong>Address: </strong>
+            <span>{{ event.number_street }} {{ event.street }}, {{ event.city }}, {{ event.country }}</span>
+          </li>
+          <li class="list-group-item">
+            <strong>Organizer: </strong>
+            <span>{{ event.organizer_id.username }}</span>
+          </li>
+          <li class="list-group-item">
+            <strong>Category: </strong>
+            <span class="badge rounded-pill event-category"
+                  [ngStyle]="{'background-color': getCategoryColor(event.category_id)}">
+              {{ event.category_id.name }}
+            </span>
+          </li>
+          <li class="list-group-item">
+            <strong>Date: </strong>
+            <span>{{ event.event_date }}</span>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
 </div>
