--- a/src/app/components/sign-in-user/sign-in-user.component.html
+++ b/src/app/components/sign-in-user/sign-in-user.component.html
@@ -1,1 +1,78 @@
-<!--sign-in-user HTML-->
+<div class="parent">
+    <div class="container" [ngClass]="!isSignInVisible ? 'active' : ''" id="container">
+      <div class="form-container sign-up">
+        <form [formGroup]="signUpForm"
+              (ngSubmit)="onSignUp()"
+              class="needs-validation p-3"
+              autocomplete="off">
+  
+          <h1>Create Account</h1>
+          <input type="text" class="form-control" formControlName="username" placeholder="Username"
+                 [class.is-invalid]="usernameUp?.invalid && usernameUp?.touched"
+                 [class.is-valid]="usernameUp?.valid && usernameUp?.touched"/>
+          <div *ngIf="usernameUp?.invalid && usernameUp?.touched" class="invalid-feedback text-danger">
+            <div *ngIf="usernameUp?.errors?.['required']">Username is required.</div>
+            <div *ngIf="usernameUp?.errors?.['minlength']">Minimum length is 3 characters.</div>
+          </div>
+  
+          <input type="email" class="form-control" formControlName="userEmail" placeholder="Email"
+                 [class.is-invalid]="userEmailUp?.invalid && userEmailUp?.touched"
+                 [class.is-valid]="userEmailUp?.valid && userEmailUp?.touched"/>
+          <div *ngIf="userEmailUp?.invalid && userEmailUp?.touched" class="invalid-feedback text-danger">
+            <div *ngIf="userEmailUp?.errors?.['required']">Email is required.</div>
+            <div *ngIf="userEmailUp?.errors?.['email']">Invalid email format.</div>
+          </div>
+  
+          <input type="password" class="form-control" formControlName="hashed_password" placeholder="Password"
+                 [class.is-invalid]="hashed_passwordUp?.invalid && hashed_passwordUp?.touched"
+                 [class.is-valid]="hashed_passwordUp?.valid && hashed_passwordUp?.touched"/>
+          <div *ngIf="hashed_passwordUp?.invalid && hashed_passwordUp?.touched" class="invalid-feedback text-danger">
+            <div *ngIf="hashed_passwordUp?.errors?.['required']">Password is required.</div>
+            <div *ngIf="hashed_passwordUp?.errors?.['minlength']">Minimum length is 6 characters.</div>
+          </div>
+  
+          <button type="submit">Sign Up</button>
+        </form>
+      </div>
+  
+      <div class="form-container sign-in">
+        <form [formGroup]="signInForm"
+              (ngSubmit)="onSignIn()"
+              class="needs-validation p-3"
+              autocomplete="off">
+  
+          <h1>Sign In</h1>
+          <input type="text" class="form-control" formControlName="username" placeholder="Username"
+                 [class.is-invalid]="usernameIn?.invalid && usernameIn?.touched"
+                 [class.is-valid]="usernameIn?.valid && usernameIn?.touched"/>
+          <div *ngIf="usernameIn?.invalid && usernameIn?.touched" class="invalid-feedback text-danger">
+            <div *ngIf="usernameIn?.errors?.['required']">Username is required.</div>
+          </div>
+  
+          <input type="password" class="form-control" formControlName="hashed_password" placeholder="Password"
+                 [class.is-invalid]="hashed_passwordIn?.invalid && hashed_passwordIn?.touched"
+                 [class.is-valid]="hashed_passwordIn?.valid && hashed_passwordIn?.touched"/>
+          <div *ngIf="hashed_passwordIn?.invalid && hashed_passwordIn?.touched" class="invalid-feedback text-danger">
+            <div *ngIf="hashed_passwordIn?.errors?.['required']">Password is required.</div>
+          </div>
+  
+          <button type="submit">Sign In</button>
+        </form>
+      </div>
+  
+      <div class="toggle-container">
+        <div class="toggle">
+          <div class="toggle-panel toggle-left">
+            <h1>Nice to meet you!</h1>
+            <p>If you already have an account, you can sign-in just here.</p>
+            <button class="hidden" id="login" (click)="isSignInVisible = true">Sign In</button>
+          </div>
+          <div class="toggle-panel toggle-right">
+            <h1>Welcome Back!</h1>
+            <p>If you don't have any account, you can create one just here.</p>
+            <button class="hidden" id="register" (click)="isSignInVisible = false">Sign Up</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
