--- a/src/app/components/sign-in-user/sign-in-user.component.css
+++ b/src/app/components/sign-in-user/sign-in-user.component.css
@@ -7,6 +7,13 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+.parent {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
 body{
   background: #c9d6ff linear-gradient(to right, #e2e2e2, #c9d6ff);
   display: flex;
