--- a/src/app/components/event-list/event-list.component.html
+++ b/src/app/components/event-list/event-list.component.html
@@ -1,7 +1,13 @@
 <div class="search-bar mb-4 d-flex align-items-center">
   <input type="text" [(ngModel)]="eventTitle" placeholder="Search events by title" class="form-control me-2" />
   <button (click)="searchEvents()" class="btn btn-primary me-2">Search</button>
-  <button (click)="clearSearch()" class="btn btn-danger">Clear</button>
+  <button (click)="clearSearch()" class="btn btn-danger me-2">Clear</button>
+
+  <div class="input-group">
+    <input type="text" [(ngModel)]="eventCity" placeholder="Filter by city" class="form-control me-2" />
+    <button (click)="filterEventsByCity()" class="btn btn-primary me-2">Filter</button>
+    <button (click)="clearFilter()" class="btn btn-danger me-2">Clear Filter</button>
+  </div>
 </div>
 
 <div *ngIf="events && events.length" class="events-container">
