--- a/src/app/components/event-list/event-list.component.html
+++ b/src/app/components/event-list/event-list.component.html
@@ -10,12 +10,14 @@
   </div>
 </div>
 
-<div class="form-check form-switch ms-2">
+<div *ngIf="!isSearchingOrFiltering" class="form-check form-switch ms-2">
   <input class="form-check-input" type="checkbox" id="upcomingEvents" (change)="toggleUpcomingEvents()" />
   <label class="form-check-label" for="upcomingEvents">Show Upcoming Events Only</label>
 </div>
 
 <div *ngIf="events && events.length" class="events-container">
+  <p *ngIf="(eventTitle && !eventCity) && isSearchingOrFiltering">Result for events named with '{{ eventTitle }}'</p>
+  <p *ngIf="(eventCity && !eventTitle) && isSearchingOrFiltering">Result for events located in '{{ eventCity }}'</p>
   <div *ngFor="let event of events">
     <app-event-list-item [event]="event"></app-event-list-item>
   </div>
