--- a/src/app/components/event-list-item/event-list-item.component.css
+++ b/src/app/components/event-list-item/event-list-item.component.css
@@ -106,3 +106,21 @@
 .register-button, .unregister-button {
   margin-top: 10px;
 }
+
+.feedback {
+  margin-bottom: 10px;
+}
+
+.user-badge {
+  display: inline-block;
+  background-color: #007bff;
+  color: white;
+  margin-bottom: 5px;
+  padding: 5px;
+}
+
+.feedback-rating {
+  display: block;
+  margin-top: -5px;
+}
+
